--- a/WatchApp Extension/Info.plist
+++ b/WatchApp Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>org.voisine.breadwallet.watchkitapp</string>
+			<string>org.rizali.breadwallet.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
