--- a/BreadWallet/Info.plist
+++ b/BreadWallet/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ƀread</string>
+	<string>Financial Gate</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
